fro-2-account-settings: (fix: adjusted the overlapping issue in the mobileview

--- a/src/pages/settingsPage/profilePage.css
+++ b/src/pages/settingsPage/profilePage.css
@@ -94,6 +94,26 @@ footer {
 }
 
 /* media queries starts here */
+@media screen and (max-width: 376px){
+  .avatar {
+    width: 55px;
+  }
+  label {
+    display: flex;
+    flex-direction: column;
+    width: 62%;
+    text-align: left;
+    padding-bottom: 0.2rem;
+    font-size: 13px;
+  }
+  .field {
+    font-size: 12px;
+  } 
+  .fullName h1 {
+    font-size: 15px;
+  }
+}
+
 @media (max-width: 476px) {
   footer {
     display: block;
@@ -107,7 +127,7 @@ footer {
   .body_title_container {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1rem;
     padding: 1rem;
   }
   label {
@@ -156,7 +176,7 @@ footer {
   .body_title_container {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1.2rem;
     padding: 1rem;
   }
   label {
@@ -164,7 +184,7 @@ footer {
     /* flex-direction: column; */
     width: 100%;
     text-align: left;
-    padding-bottom: 1rem;
+    padding-bottom: 0.5rem;
     color: #717172;
     font-family: DM Sans;
   }
@@ -175,7 +195,7 @@ footer {
     flex-direction: column;
     display: flex;
     align-items: flex-start;
-    gap: 0.5rem;
+    gap: 0.3rem;
   }
   .body_subTitles h5 {
     border-bottom: 1.5px solid #1070ff;
@@ -185,7 +205,10 @@ footer {
     display: flex;
     gap: 7rem;
     border-bottom: none;
-    padding-bottom: 1rem;
+    padding-bottom: 0.5rem;
+  }
+  .fullName span {
+    font-size: 13px;
   }
   .user_details_field {
     display: flex;
